syntax = "proto3";

option csharp_namespace = "ProtoContracts.Protos";

package auth;

message RefreshTokensRequest {
    string accessToken = 1;
}

message RefreshTokensResponse {
    string accessToken = 1;
}

message LoginRequest {
    string userName = 1;
    string password = 2;
}

message LoginResponse {
    string id = 1;
    string email = 2;
    string firstName = 3;
    string lastName = 4;
    string middleName = 5;
    string accessToken = 6;
}

message RegisterRequest {
    string userName = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    string middleName = 5;
    string email = 6;
}

message RegisterResponse {
    bool success = 1;
}

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc RefreshTokens (RefreshTokensRequest) returns (RefreshTokensResponse);
}
